# serial

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml  test.yml
cmake/: serialConfig.cmake.in
include/serial/: serial.h
include/serial/impl/: unix.h  win.h
src/: serial.cc
src/impl/: unix.cc  win.cc
src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
